@@ -9,18 +9,12 @@
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.13.2</version>
             <scope>test</scope>
-        </dependency>
-
-        <!-- https://mvnrepository.com/artifact/javassist/javassist -->
-        <dependency>
-            <groupId>org.javassist</groupId>
-            <artifactId>javassist</artifactId>
-            <version>3.29.2-GA</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/net.bytebuddy/byte-buddy-dep -->
@@ -36,7 +30,6 @@
             <artifactId>guava</artifactId>
             <version>31.1-jre</version>
         </dependency>
-
 
     </dependencies>
 
@@ -54,7 +47,7 @@
                             <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                         </manifest>
                         <manifestEntries>
-                            <Premain-Class>org.huawei.agent.RedefineClassAgent</Premain-Class>
+                            <Premain-Class>org.huawei.agent.AgentLauncher</Premain-Class>
                             <Can-Redefine-Classes>true</Can-Redefine-Classes>
                             <Can-Retransform-Classes>true</Can-Retransform-Classes>
                         </manifestEntries>
@@ -79,8 +72,8 @@
                 <version>2.12.4</version>
                 <configuration>
                     <argLine>
-                        -javaagent:/Users/alekseevaroslav/Downloads/Java-Agent-Experiments2/target/mockTime-jar-with-dependencies.jar="/Users/alekseevaroslav/Downloads/GeneratedCollectionClasses/target/GeneratedCollectionClasses-1.0-SNAPSHOT.jar"
-                        --add-exports java.base/java.util=ALL-UNNAMED --add-reads java.base=ALL-UNNAMED
+                        -javaagent:target/mockTime-jar-with-dependencies.jar="/Users/alekseevaroslav/Downloads/GeneratedCollectionClasses/target/GeneratedCollectionClasses-1.0-SNAPSHOT.jar"="/Users/alekseevaroslav/Downloads/Java-Agent-Experiments2/replacements for the original classes.txt"
+<!--                        &#45;&#45;add-exports java.base/java.util=ALL-UNNAMED &#45;&#45;add-reads java.base=ALL-UNNAMED-->
 <!--                        -verbose:class-->
                     </argLine>
                 </configuration>
